滑动窗口困难题+1

--- a/算法.md
+++ b/算法.md
@@ -2,6 +2,123 @@
 # 算法部分
 
 ## 滑动窗口
+&emsp; 当需要保持一个经常发生变动的数组/子串时，并对所给数据中的部分按要求进行截取时可以采用滑动窗口的形式
+___
+### 例题
+#### [76. 最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/)
+
+困难
+
+给你一个字符串 s 、一个字符串 t 。返回 s 中涵盖 t 所有字符的最小子串。如果 s 中不存在涵盖 t 所有字符的子串，则返回空字符串 "" 。
+
+ 
+
+注意：
+* 对于 t 中重复字符，我们寻找的子字符串中该字符数量必须不少于 t 中该字符数量。
+  
+* 如果 s 中存在这样的子串，我们保证它是唯一的答案。
+ 
+
+>示例 1：
+>输入：s = "ADOBECODEBANC", t = "ABC"
+>输出："BANC"
+>解释：最小覆盖子串 "BANC" 包含来自字符串 t 的 'A'、'B' 和 'C'。
+
+
+>示例 2：
+>输入：s = "a", t = "a"
+>输出："a"
+>解释：整个字符串 s 是最小覆盖子串。
+
+>示例 3:
+>输入: s = "a", t = "aa"
+>输出: ""
+>解释: t 中两个字符 'a' 均应包含在 s 的子串中，
+>因此没有符合条件的子字符串，返回空字符串。
+ 
+
+提示：
+
+* m == s.length
+* n == t.length
+* 1 <= m, n <= 105
+* s 和 t 由英文字母组成
+ 
+
+进阶：你能设计一个在 o(m+n) 时间内解决此问题的算法吗？
+
+##### 本人解法：
+######   首次提交
+```python
+class Solution:
+    def minWindow(self, s: str, t: str) -> str:
+        a = {}
+        b = {}
+
+        for i in t :
+            b[i] = b.get(i,0) +1 
+
+        def Count(a,b):
+            for i in b :
+                if a.get(i,0) < b[i]:
+                    return True
+            return False
+            
+        n = len(s)
+        l,r = 0,0 
+        ans = ""
+        temp = inf
+        while r < n :
+            while r < n and Count(a,b):
+                a[s[r]] = a.get(s[r],0) +1 
+                r+=1 
+            while l<r and a.get(s[l],0) > b.get(s[l],-1):
+                a[s[l]] =a.get(s[l],0) -1 
+                l+=1 
+            if r-l < temp and not Count(a,b) :
+                temp = r-l 
+                ans = s[l:r]
+            if r >=n :
+                break
+            a[s[l]] =a.get(s[l],0) -1 
+            l+=1 
+        return ans
+```
+###### 想法
+分析题目，要求取字符串中的子串，可以很快的想到要使用滑动窗口。虽然很丑陋，但是还是勉强满足了要求
+![Alt text](data/算法/76_1.png)
+###### 他人更优解
+```
+def minWindow(self, s: str, t: str) -> str:
+    need=collections.defaultdict(int)
+    for c in t:
+        need[c]+=1
+    needCnt=len(t)
+    i=0
+    res=(0,float('inf'))
+    for j,c in enumerate(s):
+        if need[c]>0:
+            needCnt-=1
+        need[c]-=1
+        if needCnt==0:       #步骤一：滑动窗口包含了所有T元素
+            while True:      #步骤二：增加i，排除多余元素
+                c=s[i] 
+                if need[c]==0:
+                    break
+                need[c]+=1
+                i+=1
+            if j-i<res[1]-res[0]:   #记录结果
+                res=(i,j)
+            need[s[i]]+=1  #步骤三：i增加一个位置，寻找新的满足条件滑动窗口
+            needCnt+=1
+            i+=1
+    return '' if res[1]>len(s) else s[res[0]:res[1]+1]    #如果res始终没被更新过，代表无满足条件的结果
+
+作者：Mcdull
+链接：https://leetcode.cn/problems/minimum-window-substring/solutions/258513/tong-su-qie-xiang-xi-de-miao-shu-hua-dong-chuang-k/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
 
 ## 链表
 
