--- a/算法.md
+++ b/算法.md
@@ -138,11 +138,76 @@ ________________________________________________
 > * `heappop` # 从堆中弹出并返回最小的值
 _____________________________________________
 ### 例题
+#### [23. 合并 K 个升序链表](https://leetcode.cn/problems/merge-k-sorted-lists/description/)
+困难
+给你一个链表数组，每个链表都已经按升序排列。
 
+请你将所有链表合并到一个升序链表中，返回合并后的链表。
+
+ 
+
+    示例 1：
+
+    输入：lists = [[1,4,5],[1,3,4],[2,6]]
+    输出：[1,1,2,3,4,4,5,6]
+    解释：链表数组如下：
+    [
+    1->4->5,
+    1->3->4,
+    2->6
+    ]
+    将它们合并到一个有序链表中得到。
+    1->1->2->3->4->4->5->6
+
+>
+    示例 2：
+
+    输入：lists = []
+    输出：[]
+
+>
+    示例 3：
+
+    输入：lists = [[]]
+    输出：[]
+    
+
+提示：
+
+* k == lists.length
+* 0 <= k <= 10^4
+* 0 <= lists[i].length <= 500
+* -10^4 <= lists[i][j] <= 10^4
+* lists[i] 按 升序 排列
+* lists[i].length 的总和不超过 10^4
+
+题解:
+```python
+class Solution:
+    def mergeKLists(self, lists: List[ListNode]) -> ListNode:
+        import heapq
+        que = []
+        for index, node in enumerate(lists):
+                if node!=None:
+                    heapq.heappush(que ,(node.val, index))
+    
+        dummy_node = ListNode(-1)
+        cur = dummy_node
+        while que:
+            val, index =  heapq.heappop(que)
+            cur.next = lists[index]
+            cur = cur.next
+            lists[index] = lists[index].next
+            if lists[index] != None:
+                heapq.heappush(que, (lists[index].val, index))
+        return dummy_node.next
+
+```
 ## 动态规划
 ### 定义
 _____________________________________________
 ### 例题
+
 #### [ 1289. 下降路径最小和 II](https://leetcode.cn/problems/minimum-falling-path-sum-ii/description/)
 提示 困难
 给你一个 n x n 整数矩阵 grid ，请你返回 非零偏移下降路径 数字和的最小值。
