图(深度优先) 例题+1

--- a/算法.md
+++ b/算法.md
@@ -121,17 +121,112 @@ def minWindow(self, s: str, t: str) -> str:
 ```
 
 ## 链表
-
-## 树
-
+____
 ## 图
+&emsp;&emsp;当发现题目中构成了相连的多个节点时，即可认为是图这一方向的题目。主要的算法有**深度优先算法**，**广度优先算法**，**剪枝**等
+### 例题
+
+#### 1466. 重新规划路线
+
+中等
+
+n 座城市，从 0 到 n-1 编号，其间共有 n-1 条路线。因此，要想在两座不同城市之间旅行只有唯一一条路线可供选择（路线网形成一颗树）。去年，交通运输部决定重新规划路线，以改变交通拥堵的状况。
+
+路线用 `connections` 表示，其中 `connections[i] = [a, b]` 表示从城市 a 到 b 的一条有向路线。
+
+今年，城市 0 将会举办一场大型比赛，很多游客都想前往城市 0 。
+
+请你帮助重新规划路线方向，使每个城市都可以访问城市 0 。返回需要变更方向的最小路线数。
+
+题目数据保证每个城市在重新规划路线方向后都能到达城市 0 。
+
+ 
+
+    示例 1：
+    输入：n = 6, connections = [[0,1],[1,3],[2,3],[4,0],[4,5]]
+    输出：3
+    解释：更改以红色显示的路线的方向，使每个城市都可以到达城市 0 。
+>
+    示例 2：
+    输入：n = 5, connections = [[1,0],[1,2],[3,2],[3,4]]
+    输出：2
+    解释：更改以红色显示的路线的方向，使每个城市都可以到达城市 0 。
+
+>
+
+    示例 3：
+    输入：n = 3, connections = [[1,0],[2,0]]
+    输出：0
+ 
+
+提示：
+
+* 2 <= n <= 5 * 10^4^
+* `connections.length` == n-1
+* `connections[i].length` == 2
+* 0 <= `connections[i][0], connections[i][1]` <= n-1
+* `connections[i][0]` != `connections[i][1]`
+
+#### 本人解法
+```python
+class Solution:
+    def minReorder(self, n: int, connections: List[List[int]]) -> int:
+        inputs  = {}
+        outputs  = {}
+        ans = 0 
+        for i,j in connections:
+            if i not in outputs :
+                outputs[i] = [j]
+            else:
+                outputs[i].append(j)
+            if j not in inputs :
+                inputs[j] = [i]
+            else:
+                inputs[j].append(i)
+            
+        def find(node,pre):
+            temp = 0 
+            for next in outputs.get(node,[]):
+                if next != pre:
+                    temp += 1+find(next,node)
+            for next in inputs.get(node,[]):
+                if next != pre :
+                    temp += find(next,node)
+            return temp
+
+        if 0 in outputs :
+            for i in outputs[0]:
+                ans +=1
+                if 0 in inputs :
+                    inputs[0].append(i)
+                else:
+                    inputs[0] = [i]
+
+        for i in inputs[0]:
+            ans += find(i,0)
+        return ans 
+        
+
+```
+##### 思路
+&emsp;&emsp;由题目中的铁路与各个城市相连，可以很清晰的得出本题使用的是图。由于所有的城市均要前往0城市，所以要以0城市为中心进行构图。
+1. 由于路线总数有且仅有n-1条，所以不可能存在离开0城市的路线
+2. 所有路线均要向着0城市方向移动
+3. 所有远离0城市方向的路线均需要被改造
+
+&emsp;&emsp;由以上三个规则可以得出需要构建两张图，一张用于存储入点的路线，一张用于获取出点的路线
+&emsp;&emsp;在图构建完成后，从0城市开始向外进行搜索。
+1. 先将从0城市远离的路线进行改造，以使得我们的搜索能够起步。
+2. 先遍历出点图，若该点存在上一点之外的出点时，那么该出点的路线便是需要改造的。
+3. 后遍历入点图，将搜索范围进行放大(同时要防止回到上一点)
+____
 
 ## 堆
-&emsp; 当需要保持一个经常发生变动的列表的有序性时可以采用堆的形式
+&emsp;&emsp; 当需要保持一个经常发生变动的列表的有序性时可以采用堆的形式
 ________________________________________________
-### 定义
+
 ### python中的使用
-&emsp; python中内置了`heapq`来方便我们构建根堆(默认只有小根堆)
+&emsp;&emsp; python中内置了`heapq`来方便我们构建根堆(默认只有小根堆)
 #### 常用函数
 > * `heappush` # 往堆中添加新值
 > * `heapify` #以线性时间将一个列表转化为小根堆
@@ -140,9 +235,9 @@ _____________________________________________
 ### 例题
 #### [23. 合并 K 个升序链表](https://leetcode.cn/problems/merge-k-sorted-lists/description/)
 困难
-给你一个链表数组，每个链表都已经按升序排列。
+&emsp;给你一个链表数组，每个链表都已经按升序排列。
 
-请你将所有链表合并到一个升序链表中，返回合并后的链表。
+&emsp;请你将所有链表合并到一个升序链表中，返回合并后的链表。
 
  
 
@@ -203,9 +298,10 @@ class Solution:
         return dummy_node.next
 
 ```
-## 动态规划
-### 定义
 _____________________________________________
+## 动态规划
+
+
 ### 例题
 
 #### [ 1289. 下降路径最小和 II](https://leetcode.cn/problems/minimum-falling-path-sum-ii/description/)
