--- a/算法.md
+++ b/算法.md
@@ -374,9 +374,15 @@ ________________________________________________
 ### python中的使用
 &emsp;&emsp; python中内置了`heapq`来方便我们构建根堆(默认只有小根堆)
 #### 常用函数
-> * `heappush` # 往堆中添加新值
-> * `heapify` #以线性时间将一个列表转化为小根堆
-> * `heappop` # 从堆中弹出并返回最小的值
+> * `heappush(heap,n)` # 往堆中添加新值
+> * `heapify(list)` #以线性时间将一个列表转化为小根堆
+> * `heappop(heap)` # 从堆中弹出并返回最小的值
+> * `heapreplace(heap,n)` #先将堆顶的数据出堆，然后将n添加到堆中。
+> * `nlargest(num, heap)` #从堆中取出num个数据，从最大的数据开始取，返回结果是一个列表(即使只取一个数据)。如果num大于等于堆中的数据数量，则从大到小取出堆中的所有数据，不会报错。
+> * `nsmallest(num, heap)` #从堆中取出num个数据，从最小的数据开始取，返回结果是一个列表。
+> * `merge(list1, list2)`，将两个有序的列表合并成一个新的有序列表，返回结果是一个迭代器。
+
+
 _____________________________________________
 ### 例题
 #### [23. 合并 K 个升序链表](https://leetcode.cn/problems/merge-k-sorted-lists/description/)
