--- a/算法.md
+++ b/算法.md
@@ -5,7 +5,7 @@
 &emsp; 当需要保持一个经常发生变动的数组/子串时，并对所给数据中的部分按要求进行截取时可以采用滑动窗口的形式
 ___
 ### 例题
-#### [76. 最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/)
+#### 76. 最小覆盖子串([原题](https://leetcode.cn/problems/minimum-window-substring/))
 
 困难
 
@@ -125,7 +125,7 @@ ____
 ## 图
 &emsp;&emsp;当发现题目中构成了相连的多个节点时，即可认为是图这一方向的题目。主要的算法有**深度优先算法**，**广度优先算法**，**剪枝**等
 ### 例题
-#### 1466. 重新规划路线
+#### 1466. 重新规划路线([原题](https://leetcode.cn/problems/reorder-routes-to-make-all-paths-lead-to-the-city-zero/description/))
 
 中等
 
@@ -219,7 +219,7 @@ class Solution:
 2. 先遍历出点图，若该点存在上一点之外的出点时，那么该出点的路线便是需要改造的。
 3. 后遍历入点图，将搜索范围进行放大(同时要防止回到上一点)
 ____
-#### [1926. 迷宫中离入口最近的出口](https://leetcode.cn/problems/nearest-exit-from-entrance-in-maze/description/?envType=study-plan-v2&envId=leetcode-75)
+#### 1926. 迷宫中离入口最近的出口([原题](https://leetcode.cn/problems/nearest-exit-from-entrance-in-maze/description/?envType=study-plan-v2&envId=leetcode-75))
 
 中等
 
@@ -367,6 +367,86 @@ class Solution:
 ![Alt text](data/算法/1926_2.png)
 
 ___
+## 哈希表
+&emsp;&emsp;在python中使用字典可以很快的构建一个哈希表，其本质其实就是通过下标来快速获取对应的值
+```python
+    dict = {}
+```
+### 例题
+#### 41. 缺失的第一个正数([原题](https://leetcode.cn/problems/first-missing-positive/?envType=study-plan-v2&envId=top-100-liked))[原地哈希]
+提示困难
+
+给你一个未排序的整数数组 nums ，请你找出其中没有出现的最小的正整数。
+
+请你实现时间复杂度为 O(n) 并且只使用常数级别额外空间的解决方案。
+ 
+
+    示例 1：
+
+    输入：nums = [1,2,0]
+    输出：3
+
+>
+
+    示例 2：
+
+    输入：nums = [3,4,-1,1]
+    输出：2
+
+>
+
+    示例 3：
+
+    输入：nums = [7,8,9,11,12]
+    输出：1
+ 
+
+提示：
+
+* `1 <= nums.length <= 5 * 105`
+* `-231 <= nums[i] <= 231 - 1`
+  
+##### 本人解法
+   完全不熟，决定利用他人题解进行学习
+
+##### 他人解法
+```python
+from typing import List
+
+class Solution:
+
+    # 3 应该放在索引为 2 的地方
+    # 4 应该放在索引为 3 的地方
+
+    def firstMissingPositive(self, nums: List[int]) -> int:
+        size = len(nums)
+        for i in range(size):
+            # 先判断这个数字是不是索引，然后判断这个数字是不是放在了正确的地方
+            while 1 <= nums[i] <= size and nums[i] != nums[nums[i] - 1]:
+                self.__swap(nums, i, nums[i] - 1)
+
+        for i in range(size):
+            if i + 1 != nums[i]:
+                return i + 1
+
+        return size + 1
+
+    def __swap(self, nums, index1, index2):
+        nums[index1], nums[index2] = nums[index2], nums[index1]
+
+作者：liweiwei1419
+链接：https://leetcode.cn/problems/first-missing-positive/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+根据题意分析得，所求的值必然在数组的大小范围内。而不在数组长度范围内的所有数值均可忽略。那么可以得出
+  1. 通过**遍历**来**将在数组的大小范围内的数值排列到其对应的下标上**，**忽略超出范围的值**
+   
+此时可能会出现换回来的值依旧在范围内的情况，所以需要
+1. 进行一个**while循环**，保证在经过多次交换后，所遍历到的位置上必定为**越界数值**或者**下标与值对应**
+
+在遍历交换完成后，数组中所有范围内的数值均已到了对应下标的位置上。所以，
+1. 通过一次遍历获取第一个数值与对应下标不同的值即为所求
 ## 堆
 &emsp;&emsp; 当需要保持一个经常发生变动的列表的有序性时可以采用堆的形式
 ________________________________________________
@@ -385,7 +465,7 @@ ________________________________________________
 
 _____________________________________________
 ### 例题
-#### [23. 合并 K 个升序链表](https://leetcode.cn/problems/merge-k-sorted-lists/description/)
+#### 23. 合并 K 个升序链表([原题](https://leetcode.cn/problems/merge-k-sorted-lists/description/))
 困难
 &emsp;给你一个链表数组，每个链表都已经按升序排列。
 
@@ -456,7 +536,7 @@ _____________________________________________
 
 ### 例题
 
-#### [ 1289. 下降路径最小和 II](https://leetcode.cn/problems/minimum-falling-path-sum-ii/description/)
+####  1289. 下降路径最小和 II ([原题](https://leetcode.cn/problems/minimum-falling-path-sum-ii/description/))
 提示 困难
 给你一个 n x n 整数矩阵 grid ，请你返回 非零偏移下降路径 数字和的最小值。
 
@@ -516,13 +596,14 @@ class Solution:
         return min( get(0,i) for i in range(n))
 ```
 ###### 想法
-分析题目可得，下降路径中每一行都是独立的，有且只有上一行的同列不可取。可以使用递归的方式实现动态规划，并使用字典来防止重复计算。
+&emsp; &emsp;分析题目可得，下降路径中每一行都是独立的，有且只有上一行的同列不可取。可以使用递归的方式实现动态规划，并使用字典来防止重复计算。
 * 时间复杂度分析:**O(n^2^)**
 * 空间复杂度分析:**O(n^2^)**
-原本以为200^2^还是能接受的，可是还是出现的超时
+  
+&emsp; &emsp;原本以为200^2^还是能接受的，可是还是出现的超时
 
 ###### 分析
-每一行实际上都只用到了最小和次小值(当无法取得最小值时取次大值)，可将空间复杂度压缩为**O(n)**，同时大大缩短了查找的时间
+&emsp; &emsp;每一行实际上都只用到了最小和次小值(当无法取得最小值时取次大值)，可将空间复杂度压缩为**O(n)**，同时大大缩短了查找的时间
 
 ###### 第二次提交
 ```python
@@ -592,3 +673,86 @@ class Solution:
 ```
 * 时间复杂度分析:**O(n^2^)**
 * 空间复杂度分析:**O(1)**
+  
+#### 1388. 3n 块披萨([原题](https://leetcode.cn/problems/minimum-falling-path-sum-ii/description/))
+提示 困难
+
+给你一个披萨，它由 3n 块不同大小的部分组成，现在你和你的朋友们需要按照如下规则来分披萨：
+
+你挑选 任意 一块披萨。
+Alice 将会挑选你所选择的披萨逆时针方向的下一块披萨。
+Bob 将会挑选你所选择的披萨顺时针方向的下一块披萨。
+重复上述过程直到没有披萨剩下。
+每一块披萨的大小按顺时针方向由循环数组 slices 表示。
+
+请你返回你可以获得的披萨大小总和的最大值。
+
+ 
+
+    示例 1：
+
+    输入：slices = [1,2,3,4,5,6]
+    输出：10
+    解释：选择大小为 4 的披萨，Alice 和 Bob 分别挑选大小为 3 和 5 的披萨。然后你选择大小为 6 的披萨，Alice 和 Bob 分别挑选大小为 2 和 1 的披萨。你获得的披萨总大小为 4 + 6 = 10 。
+
+>
+
+
+    示例 2：
+
+    输入：slices = [8,9,8,6,1,1]
+    输出：16
+    解释：两轮都选大小为 8 的披萨。如果你选择大小为 9 的披萨，你的朋友们就会选择大小为 8 的披萨，这种情况下你的总和不是最大的。
+ 
+
+提示：
+
+- `1 <= slices.length <= 500`
+- `slices.length % 3 == 0`
+- `1 <= slices[i] <= 1000`
+
+##### 本人解法
+&emsp; &emsp;完全不熟，决定利用他人题解进行学习
+
+##### 他人解法
+```python
+class Solution:
+    def maxSizeSlices(self, slices: List[int]) -> int:
+        def calculate(slices):
+            N, n = len(slices), (len(slices) + 1) // 3
+            dp = [[-10**9 for i in range(n + 1)] for j in range(N)]
+            dp[0][0], dp[0][1] = 0, slices[0]
+            dp[1][0], dp[1][1] = 0, max(slices[0], slices[1])
+            for i in range(2, N, 1):
+                dp[i][0] = 0
+                for j in range(1, n + 1, 1):
+                    dp[i][j] = max(dp[i - 1][j], dp[i - 2][j - 1] + slices[i])
+            return dp[N - 1][n]
+        v1 = slices[1:]
+        v2 = slices[0:-1]
+        ans1 = calculate(v1)
+        ans2 = calculate(v2)
+        return max(ans1, ans2)
+
+作者：力扣官方题解
+链接：https://leetcode.cn/problems/pizza-with-3n-slices/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+根据描述，可以得出几个结论。
+  1. 每个人所取得的披萨总数是固定不变的
+  2. 披萨所取值的大小总和可以进行递推
+
+每块披萨只需要进行两种情况的记录与分析。
+  1. 当前披萨为第几块
+  2. 当前披萨的前一块是否被取了
+   
+所以可以使用`动态规划`的方式进行推导。对每一块披萨(**第二块以后的**)，都只需要进行两种值的获取。
+  1. 当前块是披萨总块数的第i块
+  2. 当前块属于当前所取披萨序列中的第j块
+
+所以只需要进行以下两种情况的比较
+  1. 此块披萨之前属于第j块披萨的最大值(不取本块披萨)
+  2. 此块披萨之前属于第j-1块披萨的最大值+当前披萨的大小(取本块披萨)
+   
+由于披萨可以循环的取，所以当选择第一块披萨时就不能选择最后一块了，反之亦然。
