二分查找例题+2

--- a/算法.md
+++ b/算法.md
@@ -1,10 +1,10 @@
 # [笔记目录](目录.md)
 # 算法部分
 
-## 滑动窗口
+## 1.滑动窗口
 &emsp; 当需要保持一个经常发生变动的数组/子串时，并对所给数据中的部分按要求进行截取时可以采用滑动窗口的形式
 ___
-### 例题
+### 1.1 例题
 #### 76. 最小覆盖子串([原题](https://leetcode.cn/problems/minimum-window-substring/))
 
 困难
@@ -120,11 +120,11 @@ def minWindow(self, s: str, t: str) -> str:
 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 ```
 
-## 链表
+## 2.链表
 ____
-## 图
+## 3.图
 &emsp;&emsp;当发现题目中构成了相连的多个节点时，即可认为是图这一方向的题目。主要的算法有**深度优先算法**，**广度优先算法**，**剪枝**等
-### 例题
+### 3.1 例题
 #### 1466. 重新规划路线([原题](https://leetcode.cn/problems/reorder-routes-to-make-all-paths-lead-to-the-city-zero/description/))
 
 中等
@@ -367,12 +367,12 @@ class Solution:
 ![Alt text](data/算法/1926_2.png)
 
 ___
-## 哈希表
+## 4.哈希表
 &emsp;&emsp;在python中使用字典可以很快的构建一个哈希表，其本质其实就是通过下标来快速获取对应的值
 ```python
     dict = {}
 ```
-### 例题
+### 4.1 例题
 #### 41. 缺失的第一个正数([原题](https://leetcode.cn/problems/first-missing-positive/?envType=study-plan-v2&envId=top-100-liked))[原地哈希]
 提示困难
 
@@ -447,11 +447,15 @@ class Solution:
 
 在遍历交换完成后，数组中所有范围内的数值均已到了对应下标的位置上。所以，
 1. 通过一次遍历获取第一个数值与对应下标不同的值即为所求
-## 堆
+
+
+____
+
+## 5.堆
 &emsp;&emsp; 当需要保持一个经常发生变动的列表的有序性时可以采用堆的形式
 ________________________________________________
 
-### python中的使用
+### 5.1 python中的使用
 &emsp;&emsp; python中内置了`heapq`来方便我们构建根堆(默认只有小根堆)
 #### 常用函数
 > * `heappush(heap,n)` # 往堆中添加新值
@@ -464,7 +468,7 @@ ________________________________________________
 
 
 _____________________________________________
-### 例题
+### 5.2 例题
 #### 23. 合并 K 个升序链表([原题](https://leetcode.cn/problems/merge-k-sorted-lists/description/))
 困难
 &emsp;给你一个链表数组，每个链表都已经按升序排列。
@@ -531,10 +535,10 @@ class Solution:
 
 ```
 _____________________________________________
-## 动态规划
+## 6.动态规划
 
 
-### 例题
+### 6.1 例题
 
 ####  1289. 下降路径最小和 II ([原题](https://leetcode.cn/problems/minimum-falling-path-sum-ii/description/))
 提示 困难
@@ -756,3 +760,187 @@ class Solution:
   2. 此块披萨之前属于第j-1块披萨的最大值+当前披萨的大小(取本块披萨)
    
 由于披萨可以循环的取，所以当选择第一块披萨时就不能选择最后一块了，反之亦然。
+
+## 7.二分查找
+&emsp;&emsp;二分查找是算法中重要的一部分，通常用于在较大基数的数据中心寻找某些特定的值。**时间复杂度**为`o(log n)`
+### 7.1 python中的使用
+&emsp;&emsp;在python可以使用bisect库来快速调用二分查找。
+#### 常用函数
+* `bisect(lx, num)`  : lx 为查询列表，num 为待查询数值
+* `bisect_left(ls, x)`
+* `bisec_right(ls, x)`
+  > 
+
+> case 1
+> 如果列表中没有元素x，那么bisect_left(ls, x)和bisec_right(ls, x)返回相同的值，该值是x在ls中“合适的插入点索引，使得数组有序”。> 此时，ls[index2] > x，ls[index3] > x。
+
+
+>case 2
+如果列表中只有一个元素等于x，那么bisect_left(ls, x)的值是x在ls中的索引，ls[index2] = x。而bisec_right(ls, x)的值是x在ls中的索引加1，ls[index3] > x。
+
+>case 3
+如果列表中存在多个元素等于x，那么bisect_left(ls, x)返回最左边的那个索引，此时ls[index2] = x。bisect_right(ls, x)返回最右边的那个索引加1，此时ls[index3] > x。
+
+————————————————
+版权声明：本文为CSDN博主「YMWM_」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/YMWM_/article/details/122378152
+
+### 7.2 例题
+#### 2300. 咒语和药水的成功对数([原题](https://leetcode.cn/problems/successful-pairs-of-spells-and-potions/?envType=study-plan-v2&envId=leetcode-75))
+
+中等
+
+给你两个正整数数组 `spells` 和 `potions` ，长度分别为 `n` 和 `m `，其中 `spells[i]` 表示第 `i` 个咒语的能量强度，`potions[j]` 表示第 `j` 瓶药水的能量强度。
+
+同时给你一个整数 `success` 。一个咒语和药水的能量强度 相乘 如果 大于等于 `success` ，那么它们视为一对 成功 的组合。
+
+请你返回一个长度为 `n` 的整数数组 `pairs`，其中 `pairs[i]` 是能跟第 `i` 个咒语成功组合的 药水 数目。
+
+ 
+
+    示例 1：
+
+    输入：spells = [5,1,3], potions = [1,2,3,4,5], success = 7
+    输出：[4,0,3]
+    解释：
+    - 第 0 个咒语：5 * [1,2,3,4,5] = [5,10,15,20,25] 。总共 4 个成功组合。
+    - 第 1 个咒语：1 * [1,2,3,4,5] = [1,2,3,4,5] 。总共 0 个成功组合。
+    - 第 2 个咒语：3 * [1,2,3,4,5] = [3,6,9,12,15] 。总共 3 个成功组合。
+    所以返回 [4,0,3] 。
+
+> 
+
+    示例 2：
+    输入：spells = [3,1,2], potions = [8,5,8], success = 16
+    输出：[2,0,2]
+    解释：
+    - 第 0 个咒语：3 * [8,5,8] = [24,15,24] 。总共 2 个成功组合。
+    - 第 1 个咒语：1 * [8,5,8] = [8,5,8] 。总共 0 个成功组合。
+    - 第 2 个咒语：2 * [8,5,8] = [16,10,16] 。总共 2 个成功组合。
+    所以返回 [2,0,2] 。
+ 
+
+提示：
+
+* `n == spells.length`
+* `m == potions.length`
+* `1 <= n, m <= 105`
+* `1 <= spells[i], potions[i] <= 105`
+* `1 <= success <= 1010`
+##### 本人解法
+```python
+class Solution:
+    def successfulPairs(self, spells: List[int], potions: List[int], success: int) -> List[int]:
+        potions.sort()
+        n = len(potions)
+        a = {}
+        def li(num):
+            l,r = 0,n-1
+            while l<r :
+                mid = (l+r)//2
+                temp = potions[mid] * num 
+                if temp >= success :
+                    r = mid 
+                else  :
+                    l = mid +1 
+            if potions[l] * num  >= success :
+                return r 
+            return n
+        
+        return [n-li(i) for i in spells]
+```
+##### 思路
+&emsp;&emsp;首先分析题目可以得到以下条件
+1. 如果将药水按大小进行排序不会影响结果
+2. 排序后只需要寻找最小能满足success的药水，其后所有药水均满足要求
+   
+可以看到很明显的二分条件，在有序数组中寻找满足特定值的最小/最大值。
+![Alt text](2300_1.png)
+
+##### 他人解法
+```python
+class Solution:
+    def successfulPairs(self, spells: List[int], potions: List[int], success: int) -> List[int]:
+        potions.sort()
+        return [len(potions) - bisect_right(potions, (success - 1) // x) for x in spells]
+```
+&emsp;&emsp;思路一致，但是使用了库函数。
+![Alt text](2300_2.png)
+
+#### 162. 寻找峰值([原题](https://leetcode.cn/problems/find-peak-element/?envType=study-plan-v2&envId=leetcode-75))
+中等
+峰值元素是指其值严格大于左右相邻值的元素。
+
+给你一个整数数组 nums，找到峰值元素并返回其索引。数组可能包含多个峰值，在这种情况下，返回 任何一个峰值 所在位置即可。
+
+你可以假设 nums[-1] = nums[n] = -∞ 。
+
+你必须实现时间复杂度为 `O(log n)` 的算法来解决此问题。
+
+
+    示例 1：
+
+    输入：nums = [1,2,3,1]
+    输出：2
+    解释：3 是峰值元素，你的函数应该返回其索引 2。
+>
+
+    示例 2：
+
+    输入：nums = [1,2,1,3,5,6,4]
+    输出：1 或 5 
+    解释：你的函数可以返回索引 1，其峰值元素为 2；
+        或者返回索引 5， 其峰值元素为 6。
+ 
+
+提示：
+
+* `1 <= nums.length <= 1000`
+* -2^31^ <= nums[i] <= 2^31^ - 1
+* `对于所有有效的 i 都有 nums[i] != nums[i + 1]`
+
+#### 本人解法：
+&emsp;&emsp;看到最大长度只有1000，决定直接遍历。
+```python
+class Solution:
+    def findPeakElement(self, nums: List[int]) -> int:
+        n = len(nums)
+
+        if n == 1 :
+            return 0 
+
+        i = 0 
+        a = -inf
+        b = nums[0]
+        c = nums[1]
+        while i <n-1 :
+            if b > a  and b > c:
+                return i
+            i+=1 
+            if i+1 < n :
+                a,b,c = b,c,nums[i+1]
+        return n-1
+```
+![Alt text](162_1.png)
+
+#### 他人解法：
+&emsp;&emsp;完全想不出来如何进行二分
+```python
+class Solution:
+    def findPeakElement(self, nums: List[int]) -> int:
+        left, right = -1, len(nums) - 1  # 开区间 (-1, n-1)
+        while left + 1 < right:  # 开区间不为空
+            mid = (left + right) // 2
+            if nums[mid] > nums[mid + 1]:  # 蓝色
+                right = mid
+            else:  # 红色
+                left = mid
+        return right
+
+作者：灵茶山艾府
+链接：https://leetcode.cn/problems/find-peak-element/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+##### 分析
+本质为求导，当导数发生骤变时，必定出现峰值。
