--- a/强化学习.md
+++ b/强化学习.md
@@ -17,5 +17,6 @@
 代码内容在`data`文件夹下的`ppo.ipynb`文件中。
 在学习过程中发现一个非常严肃的问题，教程的gym版本好像太低了，很多东西都对不上
 ##### 1.1.4问题
-1. even
+1. env 中的 step 的返回值与所需的不同
 ![Alt text](image.png)
+> 经过查询后发现，gym已经经历了多次的版本升级。简称，这个问题很复杂。选择性放弃。先不复现了，学了先。
