--- a/算法.md
+++ b/算法.md
@@ -944,3 +944,74 @@ class Solution:
 ```
 ##### 分析
 本质为求导，当导数发生骤变时，必定出现峰值。
+
+## 8.回溯
+&emsp;&emsp;其实回溯本身可以理解为简单一点的动态规划问题
+
+### 8.1 例题
+#### 216. 组合总和 III([原题](https://leetcode.cn/problems/combination-sum-iii/description/?envType=study-plan-v2&envId=leetcode-75))
+中等
+找出所有相加之和为 n 的 k 个数的组合，且满足下列条件：
+
+只使用数字1到9
+每个数字 最多使用一次 
+返回 所有可能的有效组合的列表 。该列表不能包含相同的组合两次，组合可以以任何顺序返回。
+
+ 
+
+    示例 1:
+
+    输入: k = 3, n = 7
+    输出: [[1,2,4]]
+    解释:
+    1 + 2 + 4 = 7
+    没有其他符合的组合了。
+
+>
+
+    示例 2:
+
+    输入: k = 3, n = 9
+    输出: [[1,2,6], [1,3,5], [2,3,4]]
+    解释:
+    1 + 2 + 6 = 9
+    1 + 3 + 5 = 9
+    2 + 3 + 4 = 9
+    没有其他符合的组合了。
+>
+> 
+    示例 3:
+
+    输入: k = 4, n = 1
+    输出: []
+    解释: 不存在有效的组合。
+    在[1,9]范围内使用4个不同的数字，我们可以得到的最小和是1+2+3+4 = 10，因为10 > 1，没有有效的组合。
+ 
+
+提示:
+
+* `2 <= k <= 9`
+* `1 <= n <= 60`
+
+#### 解法
+```python
+class Solution:
+    def combinationSum3(self, k: int, n: int) -> List[List[int]]:
+        ans = []
+        path = []
+        def dfs(i: int, t: int) -> None:
+            d = k - len(path)  # 还要选 d 个数
+            if t < 0 or t > (i * 2 - d + 1) * d // 2:  # 剪枝（已有数据过大，或是后续能取总数过小）
+                return
+            if d == 0:
+                ans.append(path.copy())
+                return
+            # 不选 i
+            if i > d: dfs(i - 1, t)
+            # 选 i
+            path.append(i)
+            dfs(i - 1, t - i)
+            path.pop()
+        dfs(9, n)
+        return ans
+```
