--- a/算法.md
+++ b/算法.md
@@ -760,7 +760,77 @@ class Solution:
   2. 此块披萨之前属于第j-1块披萨的最大值+当前披萨的大小(取本块披萨)
    
 由于披萨可以循环的取，所以当选择第一块披萨时就不能选择最后一块了，反之亦然。
+#### 62. 不同路径([原题](https://leetcode.cn/problems/unique-paths/description/?envType=study-plan-v2&envId=leetcode-75))[多维动态规划]
+中等
 
+一个机器人位于一个 m x n 网格的左上角 （起始点在下图中标记为 “Start” ）。
+
+机器人每次只能向下或者向右移动一步。机器人试图达到网格的右下角（在下图中标记为 “Finish” ）。
+
+问总共有多少条不同的路径？
+
+ 
+
+    示例 1：
+
+    输入：m = 3, n = 7
+    输出：28
+
+>
+
+    示例 2：
+
+    输入：m = 3, n = 2
+    输出：3
+    解释：
+    从左上角开始，总共有 3 条路径可以到达右下角。
+    1. 向右 -> 向下 -> 向下
+    2. 向下 -> 向下 -> 向右
+    3. 向下 -> 向右 -> 向下
+
+>
+
+    示例 3：
+
+    输入：m = 7, n = 3
+    输出：28
+
+>
+
+    示例 4：
+
+    输入：m = 3, n = 3
+    输出：6
+ 
+
+提示：
+
+* `1 <= m, n <= 100`
+* `题目数据保证答案小于等于 2 * 109`
+
+##### 解法
+```python 
+class Solution:
+    def uniquePaths(self, m: int, n: int) -> int:
+        dp = [[1]*n] + [[1]+[0] * (n-1) for _ in range(m-1)]
+        for i in range(1, m):
+            for j in range(1, n):
+                dp[i][j] = dp[i-1][j] + dp[i][j-1]
+        return dp[-1][-1]
+```
+通过记录每个点的可达路径进行递推，可优化点
+1. 由于影响每个点的`有且仅有上方和左方两个点`，完全可以使用一个一维数组来替换dp，`O(nm)` -> `O(n)`
+
+##### 优化
+```python
+class Solution:
+    def uniquePaths(self, m: int, n: int) -> int:
+        cur = [1] * n
+        for i in range(1, m):
+            for j in range(1, n):
+                cur[j] += cur[j-1]
+        return cur[-1]
+```
 ## 7.二分查找
 &emsp;&emsp;二分查找是算法中重要的一部分，通常用于在较大基数的数据中心寻找某些特定的值。**时间复杂度**为`o(log n)`
 ### 7.1 python中的使用
