--- a/算法.md
+++ b/算法.md
@@ -831,6 +831,96 @@ class Solution:
                 cur[j] += cur[j-1]
         return cur[-1]
 ```
+
+#### 72. 编辑距离([原题](https://leetcode.cn/problems/edit-distance/description/))[多维动态规划]
+困难
+
+给你两个单词 word1 和 word2， 请返回将 word1 转换成 word2 所使用的最少操作数  。
+
+你可以对一个单词进行如下三种操作：
+
+插入一个字符
+删除一个字符
+替换一个字符
+ 
+
+    示例 1：
+
+    输入：word1 = "horse", word2 = "ros"
+    输出：3
+    解释：
+    horse -> rorse (将 'h' 替换为 'r')
+    rorse -> rose (删除 'r')
+    rose -> ros (删除 'e')
+
+>
+
+    示例 2：
+
+    输入：word1 = "intention", word2 = "execution"
+    输出：5
+    解释：
+    intention -> inention (删除 't')
+    inention -> enention (将 'i' 替换为 'e')
+    enention -> exention (将 'n' 替换为 'x')
+    exention -> exection (将 'n' 替换为 'c')
+    exection -> execution (插入 'u')
+ 
+
+提示：
+
+* `0 <= word1.length, word2.length <= 500`
+* `word1 和 word2 由小写英文字母组成`
+
+##### 解法
+```python
+class Solution:
+    def minDistance(self, word1: str, word2: str) -> int:
+        n1 = len(word1)
+        n2 = len(word2)
+        dp = [[0] * (n2 + 1) for _ in range(n1 + 1)]
+        # 第一行
+        for j in range(1, n2 + 1):
+            dp[0][j] = dp[0][j-1] + 1
+        # 第一列
+        for i in range(1, n1 + 1):
+            dp[i][0] = dp[i-1][0] + 1
+        for i in range(1, n1 + 1):
+            for j in range(1, n2 + 1):
+                if word1[i-1] == word2[j-1]:
+                    dp[i][j] = dp[i-1][j-1]
+                else:
+                    dp[i][j] = min(dp[i][j-1], dp[i-1][j], dp[i-1][j-1] ) + 1
+        #print(dp)      
+        return dp[-1][-1]
+```
+![Alt text](data/算法/62_1.png)
+1. 使用i作为x轴，j作为y轴建立二维矩阵
+2. 空出一行的余量用于启动
+3. 三种操作的前一状态分别对应 删除 (dp[i-1][j] 插入dp[i][j-1] 替换 dp[i-1][j-1])
+4. 对角线保存的就是完成当前字符操作的最少步数
+
+```python
+class Solution:
+    def minDistance(self, word1: str, word2: str) -> int:
+        import functools
+        @functools.lru_cache(None)
+        def helper(i, j):
+            if i == len(word1) or j == len(word2):
+                return len(word1) - i + len(word2) - j
+            if word1[i] == word2[j]:
+                return helper(i + 1, j + 1)
+            else:
+                inserted = helper(i, j + 1)
+                deleted = helper(i + 1, j)
+                replaced = helper(i + 1, j + 1)
+                return min(inserted, deleted, replaced) + 1
+        return helper(0, 0)
+作者：powcai
+链接：https://leetcode.cn/problems/edit-distance/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
 ## 7.二分查找
 &emsp;&emsp;二分查找是算法中重要的一部分，通常用于在较大基数的数据中心寻找某些特定的值。**时间复杂度**为`o(log n)`
 ### 7.1 python中的使用
