大模型部分

--- a/数据清洗.md
+++ b/数据清洗.md
@@ -37,42 +37,32 @@ listfiles(path,1,5)
 ```
 ![Alt text](data/数据清洗/data_1.png)
 
-### 1.2  人脸检测
-
+### 1.2  人脸检测(未检测到人脸就删除)
 ```python
-# coding:utf8
-import cv2
-import dlib
-import numpy as np
-import sys
-import os
-import matplotlib.pyplot as plt
+import  mediapipe as mp
+import  cv2
+import os 
 
-# 人脸检测的接口，这个是 OpenCV 中自带的
-cascade_path = './Emotion_Recognition_File/face_detect_model/haarcascade_frontalface_default.xml'
-cascade = cv2.CascadeClassifier(cascade_path)
+mpFace = mp.solutions.face_detection
+faceDetection = mpFace.FaceDetection(min_detection_confidence=0.8)
 
-img_path = "./Emotion_Recognition_File/face_det_img/" # 测试图片路径
-images = os.listdir(img_path)
+img_path = "D:\spider\Image-Downloader-master\download_images\esr" # 测试图片路径
+images = os.listdir(img_path)   
 for image in images:
     im = cv2.imread(os.path.join(img_path, image), 1) # 读取图片
-    rects = cascade.detectMultiScale(im, 1.3, 5)  # 人脸检测函数
-    print("检测到人脸的数量", len(rects))
-    if len(rects) == 0:  # len(rects) 是检测人脸的数量，如果没有检测到人脸的话，会显示出图片，适合本地调试使用，在服务器上可能不会显示
-#         cv2.namedWindow('Result', 0)
-#         cv2.imshow('Result', im)
-#         print("没有检测到人脸")
-        pass
-    plt.imshow(im[:, :, ::-1])  # 显示
-    plt.show()
-#         os.remove(os.path.join(img_path, image)) # 
-#         k = cv2.waitKey(0)
-#         if k == ord('q'): # 在英文状态下，按下按键 q 会关闭显示窗口    
-#             break
-#     print()
-# cv2.destroyAllWindows()   
+    rects = faceDetection.process(im)  # 人脸检测函数
+    rects = rects.detections
+    if rects:
+        print("检测到人脸的数量", len(rects))
+    else:
+        print("未检测到人脸")
+        os.remove(os.path.join(img_path, image)) # 
+cv2.destroyAllWindows()   
 ```
+教程中原本使用的是`dlib`库，但是由于`dlib`库的识别精度不高，故更改为相同效果且识别精度更高的`mediapipe`。
+
+### 1.3 
 ____
-返回目录
+[返回目录](目录.md)
 [返回深度学习部分](深度学习.md/#返回坐标)
 
