--- a/大模型.md
+++ b/大模型.md
@@ -48,3 +48,11 @@ ___
 
 LoRA模型:以一定的特征替换底模中的对应元素，向现有的模型插入新的数据处理层，避免了修改原有参数，从而避免将整个模型进行拷贝
 
+1. 注意在样本中需要手动调整标签，ai识别的标签通常效果不好。
+2. dim 128
+   ![Alt text](data/深度学习/dim.png)
+   ![Alt text](data/深度学习/process.png)
+不是很对劲，stablediffusion的lora模型好像都是封装好的。而且对硬件要求更高。但是用公司的电脑还是能勉强跑跑的
+这种有整合包的不确定能不能作为项目经验写到简历中，优先级较低。选择更换ChatGLM-6B 微调来进行实战。stableDiffusion的lora模型将作为附加项进行学习
+[【官方教程】ChatGLM-6B 微调：P-Tuning，LoRA，Full parameter](https://www.bilibili.com/video/BV1fd4y1Z7Y5/?spm_id_from=333.788.recommend_more_video.2&vd_source=3b0e33a626cf5e45835cac5d91093908)
+
