--- a/数据清洗.md
+++ b/数据清洗.md
@@ -61,7 +61,29 @@ cv2.destroyAllWindows()
 ```
 教程中原本使用的是`dlib`库，但是由于`dlib`库的识别精度不高，故更改为相同效果且识别精度更高的`mediapipe`。
 
-### 1.3 
+### 1.3  图像去重
+```python
+img_list = set()
+list_dirs = os.walk(path)  #嵌套的访问文件夹下的所有文件
+
+for root, dirs, files in list_dirs:  # 遍历文件夹下的图片
+    for dir in files :
+        img_path = os.path.join(root, dir)
+        
+        #获取当前图片的md5值
+        hash = md5()
+        img = open(img_path, 'rb')
+        hash.update(img.read())
+        img.close()
+        
+        # 如果当前md5值已经存在，则需要删去
+        if hash.hexdigest() in img_list:
+            os.remove(img_path)
+        else:
+            img_list.add(hash.hexdigest())
+```
+[原文在此](https://blog.csdn.net/qq_45057749/article/details/91129088?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522169337502416800215068240%2522%252C%2522scm%2522%253A%252220140713.130102334..%2522%257D&request_id=169337502416800215068240&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-1-91129088-null-null.142^v93^chatsearchT3_1&utm_term=%E5%9B%BE%E7%89%87%E5%8E%BB%E9%87%8D&spm=1018.2226.3001.4187)，本人对代码进行了一定程度的简化以及性能优化。当然此方法只支持完全相同的图片的去重，而对相似图片则不会进行操作。
+
 ____
 [返回目录](目录.md)
 [返回深度学习部分](深度学习.md/#返回坐标)
