--- a/算法.md
+++ b/算法.md
@@ -124,7 +124,7 @@ def minWindow(self, s: str, t: str) -> str:
 ____
 ## 3.图
 &emsp;&emsp;当发现题目中构成了相连的多个节点时，即可认为是图这一方向的题目。主要的算法有**深度优先算法**，**广度优先算法**，**剪枝**等
-### 3.1 例题
+### 3.1 例题([题库](data/算法例题/图论.md))
 #### 1466. 重新规划路线([原题](https://leetcode.cn/problems/reorder-routes-to-make-all-paths-lead-to-the-city-zero/description/))
 
 中等
@@ -538,7 +538,7 @@ _____________________________________________
 ## 6.动态规划
 
 
-### 6.1 例题
+### 6.1 例题([题库](data/算法例题/动态规划.md))
 
 ####  1289. 下降路径最小和 II ([原题](https://leetcode.cn/problems/minimum-falling-path-sum-ii/description/))
 提示 困难
@@ -856,7 +856,7 @@ class Solution:
 版权声明：本文为CSDN博主「YMWM_」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
 原文链接：https://blog.csdn.net/YMWM_/article/details/122378152
 
-### 7.2 例题
+### 7.2 例题([题库](data/算法例题/二分查找.md))
 #### 2300. 咒语和药水的成功对数([原题](https://leetcode.cn/problems/successful-pairs-of-spells-and-potions/?envType=study-plan-v2&envId=leetcode-75))
 
 中等
@@ -1164,3 +1164,5 @@ class Trie(object):
 来源：力扣（LeetCode）
 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 ```
+## 10.前缀和
+### 10.1 例题([题库](data/算法例题/前缀和.md))
