--- a/data/算法例题/图论.md
+++ b/data/算法例题/图论.md
@@ -117,4 +117,80 @@ def minTrioDegree(self, n, edges):
 作者：东主楼守夜人
 链接：https://leetcode.cn/problems/minimum-degree-of-a-connected-trio-in-a-graph/
 来源：力扣（LeetCode）
-著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。```
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+
+
+# 2.深度优先遍历 
+
+
+# 3.广度优先遍历
+## 207. 课程表([原题](https://leetcode.cn/problems/course-schedule/?envType=daily-question&envId=2023-09-09))
+
+中等
+
+你这个学期必须选修 numCourses 门课程，记为 0 到 numCourses - 1 。
+
+在选修某些课程之前需要一些先修课程。 先修课程按数组 prerequisites 给出，其中 prerequisites[i] = [ai, bi] ，表示如果要学习课程 ai 则 必须 先学习课程  bi 。
+
+例如，先修课程对 [0, 1] 表示：想要学习课程 0 ，你需要先完成课程 1 。
+请你判断是否可能完成所有课程的学习？如果可以，返回 true ；否则，返回 false 。
+
+ 
+
+    示例 1：
+
+    输入：numCourses = 2, prerequisites = [[1,0]]
+    输出：true
+    解释：总共有 2 门课程。学习课程 1 之前，你需要完成课程 0 。这是可能的。
+>
+    示例 2：
+
+    输入：numCourses = 2, prerequisites = [[1,0],[0,1]]
+    输出：false
+    解释：总共有 2 门课程。学习课程 1 之前，你需要先完成​课程 0 ；并且学习课程 0 之前，你还应先完成课程 1 。这是不可能的。
+ 
+
+提示：
+
+- `1 <= numCourses <= 2000`
+- `0 <= prerequisites.length <= 5000`
+- `prerequisites[i].length == 2`
+- `0 <= ai, bi < numCourses`
+- `prerequisites[i] 中的所有课程对 互不相同`
+
+### 本人解法
+
+### 他人解法
+```python
+from collections import deque
+
+class Solution:
+    def canFinish(self, numCourses: int, prerequisites: List[List[int]]) -> bool:
+        indegrees = [0 for _ in range(numCourses)]
+        adjacency = [[] for _ in range(numCourses)]
+        queue = deque()
+        # Get the indegree and adjacency of every course.
+        for cur, pre in prerequisites:
+            indegrees[cur] += 1
+            adjacency[pre].append(cur)
+        # Get all the courses with the indegree of 0.
+        for i in range(len(indegrees)):
+            if not indegrees[i]: queue.append(i)
+        # BFS TopSort.
+        while queue:
+            pre = queue.popleft()
+            numCourses -= 1
+            for cur in adjacency[pre]:
+                indegrees[cur] -= 1
+                if not indegrees[cur]: queue.append(cur)
+        return not numCourses
+
+```
+#### 分析：
+1. 获取每个点的入度，并且将前置课程保存至另一个列表adjacency便于后续操作
+2. 初始化队列，对每个点的入度进行判断，如何为0则表示不存在前置课程，所以可以直接进行输出
+3. 进入循环，每一次均删除队列中的一个节点，然后将其所有的后置课程的入度均减一，当后置课程的入度等于0时，可以进行学习，将其加入队列。并且每一次删除后均将numCourses(课程总数)-1。
+4. 循环结束后，对numCourses进行判断如果不为零，则表示还有节点无法删去，反之则是学习完毕。
+
+可以使用后置题[课程表II ](https://leetcode.cn/problems/course-schedule-ii/description)进行练习
