--- a/算法.md
+++ b/算法.md
@@ -121,7 +121,7 @@ def minWindow(self, s: str, t: str) -> str:
 ```
 
 ## 2.链表
-____
+## 2.1 例题([题库](data/算法例题/链表.md))
 ## 3.图
 &emsp;&emsp;当发现题目中构成了相连的多个节点时，即可认为是图这一方向的题目。主要的算法有**深度优先算法**，**广度优先算法**，**剪枝**等
 ### 3.1 例题([题库](data/算法例题/图论.md))
@@ -468,7 +468,7 @@ ________________________________________________
 
 
 _____________________________________________
-### 5.2 例题
+### 5.2 例题([题库](data/算法例题/堆.md))
 #### 23. 合并 K 个升序链表([原题](https://leetcode.cn/problems/merge-k-sorted-lists/description/))
 困难
 &emsp;给你一个链表数组，每个链表都已经按升序排列。
@@ -505,12 +505,12 @@ _____________________________________________
 
 提示：
 
-* k == lists.length
-* 0 <= k <= 10^4
-* 0 <= lists[i].length <= 500
-* -10^4 <= lists[i][j] <= 10^4
-* lists[i] 按 升序 排列
-* lists[i].length 的总和不超过 10^4
+* `k == lists.length`
+* `0 <= k <= 10^4`
+* `0 <= lists[i].length <= 500`
+* `-10^4 <= lists[i][j] <= 10^4`
+* `lists[i] 按 升序 排列`
+* `lists[i].length 的总和不超过 10^4`
 
 题解:
 ```python
