--- a/强化学习.md
+++ b/强化学习.md
@@ -36,3 +36,4 @@ def game_show(state):
     cv2.imshow("game",state)
     cv2.waitKey(1)
 ```
+在data中的`ppo.ipynb `已经实现了代码的复现。但是由于工作上对于torch以及深度学习其他方面的需要，强化学习的进度暂缓
