--- a/大模型.md
+++ b/大模型.md
@@ -78,9 +78,9 @@ LoRA模型:以一定的特征替换底模中的对应元素，向现有的模型
 在测试过程中出现readline库的缺失，并且无法使用pip直接进行安装。(windows环境下无法正常安装该包)
 使用`python -m pip install pyreadline`即可完成安装
 出现"OSError: ../model does not appear to have a file named config.json. Checkout 'https://huggingface.co/../model/None' for available files."
-![Alt text](GLM_6.png)
+![Alt text](data/LLM/GLM_6.png)
 根据资料有可能是transformers版本的问题，可以奇怪的是transformers是requirements.txt中指定的版本。不管了重装以一次试试
-![Alt text](GLM_7.png)
+![Alt text](data/LLM/GLM_7.png)
 成功了，估摸着是下载的代码的版本有冲突。
 5. 模型调整开始
 ![Alt text](data/LLM/GLM_3.png)
