--- a/深度学习.md
+++ b/深度学习.md
@@ -104,7 +104,7 @@ numpy是人工智能中一个极为好用的库，大部分的算法都可以通
 ### 4.1 基础知识
 <p id = "张量"><p>
 
-#### 4.1.1 张量 ([具体笔记](./data/深度学习/tensor.ipynb))
+#### 4.1.1 张量 ([具体笔记](./data/深度学习/tensor.ipynb))<p id="tensor中的笔记绝大多数均为天池的原文件，只是根据个人理解进行了些许更改"> 
 张量(tensor)是torch中的一种特殊的数据形式，可以在GPU上计算。所以通常会把需要进行大量操作的数据均转化为tensor形式进行操作
 ##### 4.1.1.1常用函数 
 ###### 创建
@@ -121,7 +121,100 @@ numpy是人工智能中一个极为好用的库，大部分的算法都可以通
 注意事项：从torch.from_numpy创建的tensor于原ndarray共享内存，当修改其中一个数据，另一个也将会被改动。
 >
 - `torch.zeros(*size)`
-功能：**依size创建全0张量**
+**功能**：**依size创建全0张量**
+>
+- `torch.zeros_like(input)`
+ **功能**：**依input形状创建全0张量**
+>
+- `torch.ones(*size)`
+**功能**：**依size创建全1张量**
+>
+- `torch.ones_like(input)`
+ **功能**：**依input形状创建全1张量**
+>
+- `torch.full(size, fill_value)`
+ **功能**：**依size创建全fill_value张量**
+>
+- `torch.full_like(input)`
+ **功能**：**依input形状创建指定数据的张量**
+>
+- `torch.arange(start, end. step)`
+ **功能**：**创建等差的1维张量**
+>
+- `torch.linspace(start, end, steps)`
+ **功能**：**创建均分的1维张量**
+>
+- `torch.logspace(start, end, steps)`
+ **功能**：**创建对数均分的1维张量**
+>
+- `torch.eye(n)`
+ **功能**：**创建单位对角矩阵（2维张量）**
+>
+- `torch.normal(mean, std, out=None)`
+ **功能：生成正态分布（高斯分布）**
+    - `mean`: `均值`
+    - `std`: `标准差`
+>
+- `torch.normal(mean, std, size, out=None)`
+ **功能：生成一定大小的生成正态分布（高斯分布）**
+>
+- `torch.randn(size)`
+ **功能：生成标准正态分布**
+>
+- `torch.rand(size)`
+ **功能：在区间$[0, 1)$上，生成均匀分布**
+>
+- `torch.randperm(n)`
+ **功能：生成从0到n-1的随机排列**
+>
+- `torch.bernoulli(input)`
+ **功能：以input为概率，生成伯努利分布（0-1分布，两点分布）**
+###### 张量操作
+>
+- `torch.cat(tensors, dim=0)`
+ **功能：将张量按维度dim进行拼接**
+ >
+- `torch.stack(tensors, dim=0)`
+ **功能：在新创建的维度dim上进行拼接**
+ >
+- `torch.chunk(input, chunks, dim=0)`
+ **功能：将张量按维度dim进行平均切分**
+ >
+- `torch.split(tensor, split_size_or_sections, dim=0)`
+ **功能：将张量按维度dim进行切分**
+ >
+- `torch.index_select(input, dim, index)`
+ **功能：在维度dim上，按index索引数据**
+ >
+- `torch.masked_select(input, mask)`
+ **功能：按mask中的True进行索引**
+  >
+- `torch.reshape(input, shape)`
+ **功能：变换张量形状**
+  >
+- `torch.transpose(input, dim0, dim1)`
+ **功能：交换张量的两个维度**
+  >
+- `torch.t(input)`
+ **功能：2维张量转置**
+  >
+- `torch.squeeze(input, dim=None)`
+ **功能：压缩长度为1的维度（轴）**
+  >
+- `torch.unsqueeze(input, dim)`
+ **功能：依据dim扩展维度**
+   >
+- `torch.add(tensor1, tensor2)`
+ **功能：将tensor1与tensor2中对应元素进行相加**
+   >
+- `torch.mul(tensor1, tensor2)`
+ **功能：将tensor1与tensor2中对应元素进行相乘**
 
+#### 4.1.2 反向传播([具体笔记](./data/深度学习/backward.ipynb))
 
+#### 4.1.3 神经网络([具体笔记](./data/深度学习/neural_network.ipynb))<p id="neural_network中的笔记绝大多数均为天池的原文件，只是根据个人理解进行了些许更改"> 
+##### softmax回归
+将数据格式千奇百怪的输出通过softmax运算符
+来将输出变换为值为正且和为以的概率分布
 
+#####  
