softmax与反向传播部分学习

--- a/data/深度学习/torch_basic_neural_network.ipynb
+++ b/data/深度学习/torch_basic_neural_network.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "uuid": "e0cfc887-f65f-4a0d-9147-f30384b1a94b"
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "uuid": "d6966c7b-6d59-4b6d-80f2-4d6b0f8ef80d"
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "uuid": "f1e1eeb1-9472-41a3-8305-0064c35b255e"
    },
@@ -250,83 +250,75 @@
      "output_type": "stream",
      "text": [
       "epoch 1, loss 1.1055\n",
-      "epoch 2, loss 1.0455\n",
-      "epoch 3, loss 1.0058\n",
-      "epoch 4, loss 0.9789\n",
-      "epoch 5, loss 0.9587\n",
-      "epoch 6, loss 0.9419\n",
-      "epoch 7, loss 0.9269\n",
-      "epoch 8, loss 0.9130\n",
-      "epoch 9, loss 0.8999\n",
-      "epoch 10, loss 0.8874\n",
-      "epoch 11, loss 0.8752\n",
-      "epoch 12, loss 0.8634\n",
-      "epoch 13, loss 0.8519\n",
-      "epoch 14, loss 0.8407\n",
-      "epoch 15, loss 0.8298\n",
-      "epoch 16, loss 0.8194\n",
-      "epoch 17, loss 0.8093\n",
-      "epoch 18, loss 0.7995\n",
-      "epoch 19, loss 0.7901\n",
-      "epoch 20, loss 0.7810\n",
-      "epoch 21, loss 0.7723\n",
-      "epoch 22, loss 0.7639\n",
-      "epoch 23, loss 0.7559\n",
-      "epoch 24, loss 0.7482\n",
-      "epoch 25, loss 0.7409\n",
-      "epoch 26, loss 0.7338\n",
-      "epoch 27, loss 0.7270\n",
-      "epoch 28, loss 0.7206\n",
-      "epoch 29, loss 0.7145\n",
-      "epoch 30, loss 0.7086\n",
-      "epoch 31, loss 0.7030\n",
-      "epoch 32, loss 0.6977\n",
-      "epoch 33, loss 0.6926\n",
-      "epoch 34, loss 0.6878\n",
-      "epoch 35, loss 0.6832\n",
-      "epoch 36, loss 0.6788\n",
-      "epoch 37, loss 0.6747\n",
-      "epoch 38, loss 0.6707\n",
-      "epoch 39, loss 0.6669\n",
-      "epoch 40, loss 0.6632\n",
-      "epoch 41, loss 0.6598\n",
-      "epoch 42, loss 0.6565\n",
-      "epoch 43, loss 0.6533\n",
-      "epoch 44, loss 0.6503\n",
-      "epoch 45, loss 0.6474\n",
-      "epoch 46, loss 0.6447\n",
-      "epoch 47, loss 0.6421\n",
-      "epoch 48, loss 0.6396\n",
-      "epoch 49, loss 0.6372\n",
-      "epoch 50, loss 0.6349\n",
-      "epoch 51, loss 0.6327\n",
-      "epoch 52, loss 0.6306\n",
-      "epoch 53, loss 0.6286\n",
-      "epoch 54, loss 0.6267\n",
-      "epoch 55, loss 0.6249\n",
-      "epoch 56, loss 0.6232\n",
-      "epoch 57, loss 0.6215\n",
-      "epoch 58, loss 0.6199\n",
-      "epoch 59, loss 0.6183\n",
-      "epoch 60, loss 0.6168\n",
-      "epoch 61, loss 0.6154\n",
-      "epoch 62, loss 0.6140\n",
-      "epoch 63, loss 0.6127\n",
-      "epoch 64, loss 0.6115\n",
-      "epoch 65, loss 0.6102\n",
-      "epoch 66, loss 0.6091\n",
-      "epoch 67, loss 0.6079\n",
-      "epoch 68, loss 0.6068\n",
-      "epoch 69, loss 0.6058\n",
-      "epoch 70, loss 0.6047\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.6/site-packages/torch/autograd/__init__.py:132: UserWarning: CUDA initialization: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx (Triggered internally at  /pytorch/c10/cuda/CUDAFunctions.cpp:100.)\n",
-      "  allow_unreachable=True)  # allow_unreachable flag\n"
+      "epoch 2, loss 1.1009\n",
+      "epoch 3, loss 1.0965\n",
+      "epoch 4, loss 1.0923\n",
+      "epoch 5, loss 1.0882\n",
+      "epoch 6, loss 1.0843\n",
+      "epoch 7, loss 1.0805\n",
+      "epoch 8, loss 1.0768\n",
+      "epoch 9, loss 1.0733\n",
+      "epoch 10, loss 1.0699\n",
+      "epoch 11, loss 1.0666\n",
+      "epoch 12, loss 1.0634\n",
+      "epoch 13, loss 1.0604\n",
+      "epoch 14, loss 1.0574\n",
+      "epoch 15, loss 1.0546\n",
+      "epoch 16, loss 1.0518\n",
+      "epoch 17, loss 1.0492\n",
+      "epoch 18, loss 1.0466\n",
+      "epoch 19, loss 1.0441\n",
+      "epoch 20, loss 1.0417\n",
+      "epoch 21, loss 1.0394\n",
+      "epoch 22, loss 1.0371\n",
+      "epoch 23, loss 1.0349\n",
+      "epoch 24, loss 1.0328\n",
+      "epoch 25, loss 1.0308\n",
+      "epoch 26, loss 1.0288\n",
+      "epoch 27, loss 1.0268\n",
+      "epoch 28, loss 1.0249\n",
+      "epoch 29, loss 1.0231\n",
+      "epoch 30, loss 1.0213\n",
+      "epoch 31, loss 1.0196\n",
+      "epoch 32, loss 1.0179\n",
+      "epoch 33, loss 1.0162\n",
+      "epoch 34, loss 1.0146\n",
+      "epoch 35, loss 1.0131\n",
+      "epoch 36, loss 1.0115\n",
+      "epoch 37, loss 1.0100\n",
+      "epoch 38, loss 1.0086\n",
+      "epoch 39, loss 1.0072\n",
+      "epoch 40, loss 1.0058\n",
+      "epoch 41, loss 1.0044\n",
+      "epoch 42, loss 1.0031\n",
+      "epoch 43, loss 1.0018\n",
+      "epoch 44, loss 1.0005\n",
+      "epoch 45, loss 0.9992\n",
+      "epoch 46, loss 0.9980\n",
+      "epoch 47, loss 0.9968\n",
+      "epoch 48, loss 0.9956\n",
+      "epoch 49, loss 0.9944\n",
+      "epoch 50, loss 0.9933\n",
+      "epoch 51, loss 0.9922\n",
+      "epoch 52, loss 0.9911\n",
+      "epoch 53, loss 0.9900\n",
+      "epoch 54, loss 0.9889\n",
+      "epoch 55, loss 0.9879\n",
+      "epoch 56, loss 0.9868\n",
+      "epoch 57, loss 0.9858\n",
+      "epoch 58, loss 0.9848\n",
+      "epoch 59, loss 0.9838\n",
+      "epoch 60, loss 0.9828\n",
+      "epoch 61, loss 0.9819\n",
+      "epoch 62, loss 0.9809\n",
+      "epoch 63, loss 0.9800\n",
+      "epoch 64, loss 0.9791\n",
+      "epoch 65, loss 0.9782\n",
+      "epoch 66, loss 0.9773\n",
+      "epoch 67, loss 0.9764\n",
+      "epoch 68, loss 0.9755\n",
+      "epoch 69, loss 0.9747\n",
+      "epoch 70, loss 0.9738\n"
      ]
     }
    ],
@@ -367,12 +359,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "uuid": "468b3367-3241-4a5b-8d93-0a1d606b5f27"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Softmax(dim=[100, 101, 102]) Softmax(dim=[-2, -1, 0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = nn.Softmax([100, 101, 102])\n",
+    "b = nn.Softmax([-2, -1, 0])\n",
+    "print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "[返回深度学习笔记](../../深度学习.md)\n",
+    "\n",
+    "[直接前往反向传播部分](./torch_basic_backward.ipynb)"
+   ]
   }
  ],
  "metadata": {
@@ -391,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.13"
   },
   "tianchi_metadata": {
    "competitions": [],
