--- a/大模型.md
+++ b/大模型.md
@@ -14,7 +14,7 @@ ____
 子词: 经常出现的词
 
 ## 1.3 并行
-![Alt text](data/深度学习/Parallel.png)
+![Alt text](data/LLM/Parallel.png)
 
 ## 1.4 模型压缩和加速
 1. 剪枝
@@ -50,8 +50,8 @@ LoRA模型:以一定的特征替换底模中的对应元素，向现有的模型
 
 1. 注意在样本中需要手动调整标签，ai识别的标签通常效果不好。
 2. dim 128
-   ![Alt text](data/深度学习/dim.png)
-   ![Alt text](data/深度学习/process.png)
+   ![Alt text](data/LLM/dim.png)
+   ![Alt text](data/LLM/process.png)
 
 不是很对劲，stablediffusion的lora模型好像都是封装好的。而且对硬件要求更高。但是用公司的电脑还是能勉强跑跑的
 这种有整合包的不确定能不能作为项目经验写到简历中，优先级较低。选择更换ChatGLM-6B 微调来进行实战。stableDiffusion的lora模型将作为附加项进行学习
