--- a/深度学习.md
+++ b/深度学习.md
@@ -104,7 +104,7 @@ numpy是人工智能中一个极为好用的库，大部分的算法都可以通
 ### 4.1 基础知识
 <p id = "张量"><p>
 
-#### 4.1.1 张量 ([具体笔记](./data/深度学习/tensor.ipynb))<p id="tensor中的笔记绝大多数均为天池的原文件，只是根据个人理解进行了些许更改"> 
+#### 4.1.1 张量 ([具体笔记](./data/深度学习/torch_basic_tensor.ipynb))<p id="tensor中的笔记绝大多数均为天池的原文件，只是根据个人理解进行了些许更改"> 
 张量(tensor)是torch中的一种特殊的数据形式，可以在GPU上计算。所以通常会把需要进行大量操作的数据均转化为tensor形式进行操作
 ##### 4.1.1.1常用函数 
 ###### 创建
@@ -210,11 +210,81 @@ numpy是人工智能中一个极为好用的库，大部分的算法都可以通
 - `torch.mul(tensor1, tensor2)`
  **功能：将tensor1与tensor2中对应元素进行相乘**
 
-#### 4.1.2 反向传播([具体笔记](./data/深度学习/backward.ipynb))
+#### 4.1.2 反向传播([具体笔记](./data/深度学习/torch_basic_backward.ipynb))
+即误差反向传播，是训练神经网络的重要方法。
+本质是是单个样本通过计算梯度并且反向传播给各个参数以调节其权重。为了保证对于所有的样本识别均有效，实际上需要将所有的样本分别进行反向传播，然后以其平均值来真正的调整参数权重。
 
-#### 4.1.3 神经网络([具体笔记](./data/深度学习/neural_network.ipynb))<p id="neural_network中的笔记绝大多数均为天池的原文件，只是根据个人理解进行了些许更改"> 
-##### softmax回归
+
+> 由于反向传播需要的计算量较大，所以引入了batch的概念。在训练完一个批次后再将本批次一同进行反向传播
+
+#### 4.1.3 神经网络([具体笔记](./data/深度学习/torch_basic_neural_network.ipynb))<p id="neural_network中的笔记绝大多数均为天池的原文件，只是根据个人理解进行了些许更改"> 
+##### 4.1.3.1 softmax回归
 将数据格式千奇百怪的输出通过softmax运算符
 来将输出变换为值为正且和为以的概率分布
 
-#####  
+- 简单的模型定义
+```python
+# 自定义网络结构
+class LinearNet(nn.Module):
+    def __init__(self):
+        super(LinearNet, self).__init__()
+        # 定义一层全连接层
+        self.dense = nn.Linear(4, 3)
+        # 定义Softmax
+        self.softmax = nn.Softmax(dim=1)
+
+    def forward(self, x):
+        y = self.dense(x.view((-1, 4)))
+        y = self.softmax(y)
+        return y
+
+net = LinearNet()
+```
+- torch.nn.CrossEntropyLoss(weight=None, size_average=None, ignore_index=-100, reduce=None, reduction='mean')
+- 衡量模型输出与真实标签的差异，在分类时相当有用。
+- **结合了nn.LogSoftmax()和nn.NLLLoss()两个函数，进行交叉熵计算。**
+- 主要参数：
+    - weight: 各类别的loss设置权值
+    - ignore_index: 忽略某个类别
+    - reduction: 计算模式，可为none/sum/mean
+        - none: 逐个元素计算
+        - sum: 所有元素求和，返回标量
+        - mean: 加权平均，返回标量
+
+- torch.optim.SGD(params, lr=<required parameter>, momentum=0, dampening=0, weight_decay=0, nesterov=False)
+- 构建一个优化器对象optimizer，用来保存当前的状态，并能够根据计算得到的梯度来更新参数，使得模型输出更接近真实标签。
+- 学习率（learning rate）控制更新的步伐。
+- 主要参数：
+    - params: 管理的参数组
+    - lr: 初始化学习率
+    - momentum: 动量系数
+    - weight_decay: L2正则化系数
+    - nesterov: 是否采用NAG
+- zero_grad(): 清空所管理参数的梯度，因为Pytorch张量梯度不自动清零。
+- step(): 执行一步更新
+    
+- 简单模型训练过程
+```python
+loss = nn.CrossEntropyLoss()  # 交叉熵损失函数
+optimizer = torch.optim.SGD(net.parameters(), lr=0.1)  # 随机梯度下降法
+for epoch in range(70):
+    train_l = 0.0
+    y_hat = net(X)
+    l = loss(y_hat, target).sum()
+
+    # 梯度清零
+    optimizer.zero_grad()
+    # 自动求导梯度
+    l.backward()
+    # 利用优化函数调整所有权重参数
+    optimizer.step()
+
+    train_l += l
+    print('epoch %d, loss %.4f' % (epoch + 1, train_l))
+```
+
+
+### 4.2 强化部分
+
+#### 4.2.1 数据增强
+
