迁移学习与模型保存

--- a/深度学习.md
+++ b/深度学习.md
@@ -286,5 +286,14 @@ for epoch in range(70):
 
 ### 4.2 强化部分
 
-#### 4.2.1 数据增强
+#### 4.2.1 数据增强([具体笔记](./data/深度学习/torch_strengthen_Transform.ipynb))
+数据增强本质上就是将原始的训练数据通过一系列的操作来进行变换，从而形成新的数据以参与训练。
 
+#### 4.2.2 迁移学习([具体笔记](./data/深度学习/torch_strengthen_TransferLearning.ipynb))
+迁移学习是目前最为常用的一种模型训练方式。其实本质上就是使用已经训练完的模型在自己的数据集上再一次进行训练。这样的方式称为微调
+1. 在源数据集（如ImageNet数据集）上预训练一个神经网络模型，即源模型。
+2. 创建一个新的神经网络模型，即目标模型。它复制了源模型上除了输出层外的所有模型设计及其参数。我们假设这些模型参数包含了源数据集上学习到的知识，且这些知识同样适用于目标数据集。我们还假设源模型的输出层跟源数据集的标签紧密相关，因此在目标模型中不予采用。
+3. 为目标模型添加一个输出大小为目标数据集类别个数的输出层，并随机初始化该层的模型参数。
+4. 在目标数据集（如FashionMNIST数据集）上训练目标模型。我们将从头训练输出层，而其余层的参数都是基于源模型的参数微调得到的。
+
+#### 4.2.3 保存和加载模型([具体笔记](./data/深度学习/torch_strengthen_SaveAndLoad.ipynb))
