--- a/data/算法例题/动态规划.md
+++ b/data/算法例题/动态规划.md
@@ -5,8 +5,95 @@ ____
 # 1.动态规划
 
 ## 1.1 单维动态规划
+### 213. 打家劫舍 II([原题](https://leetcode.cn/problems/house-robber-ii/description/))
+
+中等
+
+你是一个专业的小偷，计划偷窃沿街的房屋，每间房内都藏有一定的现金。这个地方所有的房屋都 围成一圈 ，这意味着第一个房屋和最后一个房屋是紧挨着的。同时，相邻的房屋装有相互连通的防盗系统，如果两间相邻的房屋在同一晚上被小偷闯入，系统会自动报警 。
+
+给定一个代表每个房屋存放金额的非负整数数组，计算你 在不触动警报装置的情况下 ，今晚能够偷窃到的最高金额。
+
+ 
+
+    示例 1：
+
+    输入：nums = [2,3,2]
+    输出：3
+    解释：你不能先偷窃 1 号房屋（金额 = 2），然后偷窃 3 号房屋（金额 = 2）, 因为他们是相邻的。
+>
+    示例 2：
+
+    输入：nums = [1,2,3,1]
+    输出：4
+    解释：你可以先偷窃 1 号房屋（金额 = 1），然后偷窃 3 号房屋（金额 = 3）。
+         偷窃到的最高金额 = 1 + 3 = 4 。
+
+>
+
+    示例 3：
+
+    输入：nums = [1,2,3]
+    输出：3
+ 
+
+提示：
+
+- `1 <= nums.length <= 100`
+- `0 <= nums[i] <= 1000`
 
 
+#### 本人解法
+```python
+class Solution:
+    def rob(self, nums: List[int]) -> int:
+        n = len(nums)
+        flag = 0 
+        if n <=2 :
+            return max(nums)
+        dp = [[0,0] for i in range(n)]
+        dp1 = [[0,0] for i in range(n)]
+        dp[0][1] = nums[0]
+        dp1[0][1] = nums[-1]
+        ans = 0 
+
+        for i in range(1,n-1) :
+
+            dp[i][1] = dp[i-1][0] +nums[i]
+            dp[i][0] = max(dp[i-1][0], dp[i-1][1])
+            dp1[i][1] = dp1[i-1][0] +nums[n-i-1]
+            dp1[i][0] = max( dp1[i-1][0] , dp1[i-1][1])    
+
+        return max(dp[n-2]+dp1[n-2])
+```
+写的很粗糙，但是能用
+![Alt text](../算法/213_1.png)
+1. 从前往后抢，遇到最后一间就收手
+2. 从后往前抢，遇到第一间就收手
+3. 比较两种方式哪种赚的多。
+#### 他人解法
+```python
+class Solution:
+    def rob(self, nums: List[int]) -> int:
+        n = len(nums)
+        if n == 1:
+            return nums[0]
+        if n == 2:
+            return max(nums[0], nums[1])
+        f = [0]*(n+1)
+        # 不偷index=0
+        f[0] = 0
+        f[1] = nums[1]
+        for i in range(2, n):
+            f[i] = max(f[i-1], f[i-2]+nums[i])
+        ans = f[n-1]
+        f[0] = nums[0]
+        f[1] = max(nums[0], nums[1])
+        for i in range(2, n-1):
+            f[i] = max(f[i-1], f[i-2]+nums[i])
+        ans = max(ans, f[n-2])
+        return ans
+```
+同理，但是代码好看一些
 ## 1.2 多维动态规划
 ### 72. 编辑距离([原题](https://leetcode.cn/problems/edit-distance/description/))[多维动态规划]
 困难
