--- a/深度学习.md
+++ b/深度学习.md
@@ -289,6 +289,7 @@ for epoch in range(70):
 #### 4.2.1 数据增强([具体笔记](./data/深度学习/torch_strengthen_Transform.ipynb))
 数据增强本质上就是将原始的训练数据通过一系列的操作来进行变换，从而形成新的数据以参与训练。
 
+
 #### 4.2.2 迁移学习([具体笔记](./data/深度学习/torch_strengthen_TransferLearning.ipynb))
 迁移学习是目前最为常用的一种模型训练方式。其实本质上就是使用已经训练完的模型在自己的数据集上再一次进行训练。这样的方式称为微调
 1. 在源数据集（如ImageNet数据集）上预训练一个神经网络模型，即源模型。
@@ -297,3 +298,23 @@ for epoch in range(70):
 4. 在目标数据集（如FashionMNIST数据集）上训练目标模型。我们将从头训练输出层，而其余层的参数都是基于源模型的参数微调得到的。
 
 #### 4.2.3 保存和加载模型([具体笔记](./data/深度学习/torch_strengthen_SaveAndLoad.ipynb))
+最为简单的方式：
+```python
+# 保存  （保存可学习参数）
+PATH = './download'
+torch.save(model.state_dict(), PATH)
+
+# 加载
+model = TheModelClass()
+model.load_state_dict(torch.load(PATH))
+model.eval()
+
+#或者
+
+# 保存（保存全部模型）
+torch.save(model, PATH)
+# 加载
+model = torch.load(PATH)
+model.eval()
+```
+
