337 记忆化搜索

--- a/data/算法例题/动态规划.md
+++ b/data/算法例题/动态规划.md
@@ -94,6 +94,9 @@ class Solution:
         return ans
 ```
 同理，但是代码好看一些
+
+
+
 ## 1.2 多维动态规划
 ### 72. 编辑距离([原题](https://leetcode.cn/problems/edit-distance/description/))[多维动态规划]
 困难
@@ -327,4 +330,100 @@ class Solution:
 2. 如果递归或者循环中出现大量重复运算可以试着进行记忆化搜索
 
 
-###
+###  337. 打家劫舍 III([原题](https://leetcode.cn/problems/house-robber-iii/description/))
+
+中等
+
+小偷又发现了一个新的可行窃的地区。这个地区只有一个入口，我们称之为 root 。
+
+除了 root 之外，每栋房子有且只有一个“父“房子与之相连。一番侦察之后，聪明的小偷意识到“这个地方的所有房屋的排列类似于一棵二叉树”。 如果 两个直接相连的房子在同一天晚上被打劫 ，房屋将自动报警。
+
+给定二叉树的 root 。返回 在不触动警报的情况下 ，小偷能够盗取的最高金额 。
+
+ 
+
+>    示例 1:
+>   ![Alt text](../算法/337_1.png)
+>    输入: root = [3,2,3,null,3,null,1]
+>    输出: 7 
+>    解释: 小偷一晚能够盗取的最高金额 3 + 3 + 1 = 7
+
+
+>   示例 2:
+>   ![Alt text](../算法/337_2.png)
+>   输入: root = [3,4,5,1,3,null,1]
+>   输出: 9
+>   解释: 小偷一晚能够盗取的最高金额 4 + 5 = 9
+ 
+
+提示：
+
+- `树的节点数在 [1, 10^4] 范围内`
+- `0 <= Node.val <= 10^4`
+  
+#### 本人解法
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
+#         self.val = val
+#         self.left = left
+#         self.right = right
+class Solution:
+    def rob(self, root: Optional[TreeNode]) -> int:
+
+        @cache
+        def dfs(node,flag):
+            if not node :
+                return 0
+            left = dfs(node.left,not flag)
+            right = dfs(node.right,not flag)
+            if flag:
+                return node.val + left + right 
+            else:
+                return max(left,dfs(node.left, flag)) + max(right,dfs(node.right, flag)) 
+
+        return max(dfs(root,True),dfs(root,False)) 
+```
+1. 由于是树，所以很容易就想到进行搜索
+2. 分别探究广度优先与深度优先
+3. 广度优先的情况下，难以判断节点的前后关系
+4. 进行深度优先，同时需要判断当前节点是否被选择
+5. 当被选择的情况下，值为当前节点值与其左右子树（不含根节点）之和
+6. 当不选的情况下，值为其左右子树包含根节点与不包含两种情况的最大值之和
+7. 肉眼可见的存在大量重复运算，所以进行记忆化搜索
+![Alt text](../算法/337_3.png)
+勉强通过，去学习一波
+
+
+#### 他人解法
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, x):
+#         self.val = x
+#         self.left = None
+#         self.right = None
+
+class Solution:
+    def rob(self, root: TreeNode) -> int:
+        def _rob(root):
+            if not root: return 0, 0  # 偷，不偷
+
+            left = _rob(root.left)
+            right = _rob(root.right)
+            # 偷当前节点, 则左右子树都不能偷
+            v1 = root.val + left[1] + right[1]
+            # 不偷当前节点, 则取左右子树中最大的值
+            v2 = max(left) + max(right)
+            return v1, v2
+
+        return max(_rob(root))
+
+作者：dz-lee
+链接：https://leetcode.cn/problems/house-robber-iii/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+简单递归就结束了，优雅。
+![Alt text](../算法/337_4.png)
