--- a/data/算法例题/图论.md
+++ b/data/算法例题/图论.md
@@ -125,6 +125,7 @@ def minTrioDegree(self, n, edges):
 
 
 # 3.广度优先遍历
+
 ## 207. 课程表([原题](https://leetcode.cn/problems/course-schedule/?envType=daily-question&envId=2023-09-09))
 
 中等
@@ -194,3 +195,86 @@ class Solution:
 4. 循环结束后，对numCourses进行判断如果不为零，则表示还有节点无法删去，反之则是学习完毕。
 
 可以使用后置题[课程表II ](https://leetcode.cn/problems/course-schedule-ii/description)进行练习
+
+
+##线索二叉树
+### 98. 验证二叉搜索树([原题](https://leetcode.cn/problems/validate-binary-search-tree/description))
+
+中等
+
+给你一个二叉树的根节点 root ，判断其是否是一个有效的二叉搜索树。
+
+有效 二叉搜索树定义如下：
+
+节点的左子树只包含 小于 当前节点的数。
+节点的右子树只包含 大于 当前节点的数。
+所有左子树和右子树自身必须也是二叉搜索树。
+ 
+
+> 示例 1：
+> ![Alt text](98_1.png)
+> 输入：root = [2,1,3]
+> 输出：true
+
+> 示例 2：
+> ![Alt text](98_2.png)
+> 输入：root = [5,1,4,null,null,3,6]
+> 输出：false
+> 解释：根节点的值是 5 ，但是右子节点的值是 4 。
+ 
+
+提示：
+
+- `树中节点数目范围在[1, 10^4] 内`
+- `-2^31 <= Node.val <= 2^31 - 1`
+
+#### 本人解法
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
+#         self.val = val
+#         self.left = left
+#         self.right = right
+class Solution:
+    def isValidBST(self, root: Optional[TreeNode]) -> bool:
+        def  dfs(node):
+            if not node:
+                return True,None ,None 
+            left,min_l,max_l = dfs(node.left)
+            right,min_r, max_r = dfs(node.right)
+
+            if not left or not right :
+                return False,None ,None 
+
+            flag1 =  max_l < node.val if max_l != None  else True
+
+            flag2 =  node.val < min_r if min_r != None else True
+
+
+            if flag1 and flag2:
+                return True, min_l if min_l else node.val, max_r if max_r else node.val
+            return False,None ,None 
+
+        return dfs(root)[0]
+```
+粗糙，但是管用
+![Alt text](98_3.png)
+
+#### 他人解法
+```python
+class Solution:
+    def isValidBST(self, root: Optional[TreeNode], left=-inf, right=inf) -> bool:
+        if root is None:
+            return True
+        x = root.val
+        return left < x < right and \
+               self.isValidBST(root.left, left, x) and \
+               self.isValidBST(root.right, x, right)
+
+作者：灵茶山艾府
+链接：https://leetcode.cn/problems/validate-binary-search-tree/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+我是sb，遍历就解决的事愣是没把自己玩死。
